--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "nuxt-app",
+  "name": "akari-mn",
   "private": true,
   "scripts": {
     "build": "nuxt build",
@@ -9,7 +9,12 @@
     "postinstall": "nuxt prepare"
   },
   "devDependencies": {
+    "@nuxtjs/tailwindcss": "^6.6.6",
     "@types/node": "^18",
-    "nuxt": "^3.4.2"
+    "autoprefixer": "^10.4.14",
+    "nuxt": "^3.4.2",
+    "postcss": "^8.4.23",
+    "sass": "^1.62.0",
+    "tailwindcss": "^3.3.1"
   }
 }
