--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -28,13 +28,13 @@ jobs:
         id: pages
         uses: actions/configure-pages@v1
       - name: Install dependencies
-        run: yarn install
+        run: npm install
       - name: Static HTML export with Nuxt
-        run: yarn generate
+        run: npm run generate
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v1
         with:
-          path: '.'
+          path: ./dist
 
   deploy:
     permissions:
