--- a/package.json
+++ b/package.json
@@ -16,5 +16,9 @@
     "postcss": "^8.4.23",
     "sass": "^1.62.0",
     "tailwindcss": "^3.3.1"
+  },
+  "dependencies": {
+    "@types/prismjs": "^1.26.0",
+    "prismjs": "^1.29.0"
   }
 }
