--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "tailwindcss": "^3.3.1"
   },
   "dependencies": {
+    "@nuxt/types": "^2.16.3",
+    "@nuxtjs/axios": "^5.13.6",
     "@types/prismjs": "^1.26.0",
     "prismjs": "^1.29.0"
   }
